--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -155,7 +155,7 @@
                   <tr>
                     <td>
 		       <a name="OPENING"></a>
-			    <h3>WED 13:15-13:30 - <a style="color:#B40431;">OPENING</a></h3>
+			    <h3>WED 13:15-13:30 GMT+6- <a style="color:#B40431;">OPENING</a></h3>
 			       <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			         See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong>
 		               </p>
@@ -165,7 +165,7 @@
                    <tr>
                     <td>
 		       <a name="OPENING"></a>
-                       <h3>WED 13:30-14:30 - <a style="color:#B40431;">KEYNOTE SPEAKER 1: Kim Larsen</a></strong>
+                       <h3>WED 13:30-14:30 GMT+6 - <a style="color:#B40431;">Session 1 (Keynote Speaker): KIM LARSEN</a></h3>
 			    (Chair: Peter Csaba Olveczky)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
@@ -182,363 +182,35 @@
                    </tr>
                    <tr>
                     <td>
-                       <p class="text"><strong>14:30-15:00 - SHORT BREAK</strong></p>
+                       <h3>WED 14:30-15:00 GMT+6 - SHORT BREAK</h3>
                     </td>
 		    <hr>	   
                   </tr>               
                  <tr>
                     <td>
-                      <p class="text"><strong>15:00-17:00 - SESSION 1</strong> (Chair: TBA)</p>
+                      <h3>WED 15:00-17:00 GMT+6 - <a style="color:#B40431;">Session 2: EFFICIENT MODEL-CHECKING METHODS (Chair: TBA)</h3>
                       <ul class="text">
-                        <li><strong>15:00-15:30 - TBA</strong><br>
-                          TBA<br>
-                           <a class="link"
-                             target="_tabs"
-                             href="paper.pdf">Paper (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="slides.pdf">Slides (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="video.mp4">Video</a></li>
-                        <li><strong>15:30-16:00 - TBA</strong><br>
-                          TBA<br>
-                           <a class="link"
-                             target="_tabs"
-                             href="paper.pdf">Paper (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="slides.pdf">Slides (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="video.mp4">Video</a></li>
-                        <li><strong>16:00-16:30 - TBA</strong><br>
-                          TBA<br>
-                           <a class="link"
-                             target="_tabs"
-                             href="paper.pdf">Paper (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="slides.pdf">Slides (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="video.mp4">Video</a></li>
-                        <li><strong>16:30-17:00 - TBA</strong><br>
-                          TBA<br>
-                           <a class="link"
-                             target="_tabs"
-                             href="paper.pdf">Paper (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="slides.pdf">Slides (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="video.mp4">Video</a></li>
-                    </ul>
+                        <li><strong><a style="color:#B40431;">A divide & conquer approach to conditional stable model checking</a><br>
+				Yati Phyo, Canh Do Minh and Kazuhiro Ogata</strong>
+                          <a class="link"
+			     style="color:#B40431;"
+                             href=""></a>.
+			</li>
+			<br>
+                      </ul>
                     </td>
                   </tr>
                   <tr>
                     <td>
-                       <p class="text"><strong>17:00-18:00 - LONG BREAK</strong></p>
-                    </td>
-                  </tr>
-                 <tr>
-                    <td>
-                      <p class="text"><strong>18:00-19:30 - SESSION 2</strong> (Chair: TBA)</p>
-                      <ul class="text">
-                        <li><strong>18:00-18:30 - TBA</strong><br>
-                          TBA<br>
-                           <a class="link"
-                             target="_tabs"
-                             href="paper.pdf">Paper (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="slides.pdf">Slides (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="video.mp4">Video</a></li>
-                        <li><strong>18:30-19:00 - TBA</strong><br>
-                          TBA<br>
-                           <a class="link"
-                             target="_tabs"
-                             href="paper.pdf">Paper (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="slides.pdf">Slides (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="video.mp4">Video</a></li>
-                        <li><strong>19:00-19:30 - TBA</strong><br>
-                          TBA<br>
-                           <a class="link"
-                             target="_tabs"
-                             href="paper.pdf">Paper (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="slides.pdf">Slides (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="video.mp4">Video</a></li>
-                    </ul>
+		       <a name="OPENING"></a>
+			    <h3>FRI 17:00-18:00 GMT+6- <a style="color:#B40431;">CLOSING</a></h3>
                     </td>
                   </tr>
 <br>
 <br>
-<hr size="1">
-<a name="WED"></a>
-<h2 style="color:#B40431;">Thursday, 9 September 2021</h2>
-	          <tr>
-                    <td>
-                       <p class="text"><strong>13:30-14:30 - KEYNOTE SPEAKER 2: TBA</strong> (Chair: TBA)
-                         <br>
-                         <strong>TBA</strong>
-                         <br>
-                         <a class="link"
-                            href="keynote.html">Abstract and Speaker's Biography</a> |
-                         <a class="link"
-                            target="_tabs"
-                            href="slides.pdf">Slides (PDF)</a> |
-                         <a class="link"
-                            target="_tabs"
-                            href="video.mp4">Video</a>
-                      </p>
-                    </td>
-                   </tr>
-                   <tr>
-                    <td>
-                       <p class="text"><strong>14:30-15:00 - SHORT BREAK</strong></p>
-                    </td>
-                  </tr>               
-                 <tr>
-                    <td>
-                      <p class="text"><strong>15:00-17:00 - SESSION 3</strong> (Chair: TBA)</p>
-                      <ul class="text">
-                        <li><strong>15:00-15:30 - TBA</strong><br>
-                          TBA<br>
-                           <a class="link"
-                             target="_tabs"
-                             href="paper.pdf">Paper (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="slides.pdf">Slides (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="video.mp4">Video</a></li>
-                        <li><strong>15:30-16:00 - TBA</strong><br>
-                          TBA<br>
-                           <a class="link"
-                             target="_tabs"
-                             href="paper.pdf">Paper (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="slides.pdf">Slides (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="video.mp4">Video</a></li>
-                        <li><strong>16:00-16:30 - TBA</strong><br>
-                          TBA<br>
-                           <a class="link"
-                             target="_tabs"
-                             href="paper.pdf">Paper (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="slides.pdf">Slides (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="video.mp4">Video</a></li>
-                        <li><strong>16:30-17:00 - TBA</strong><br>
-                          TBA<br>
-                           <a class="link"
-                             target="_tabs"
-                             href="paper.pdf">Paper (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="slides.pdf">Slides (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="video.mp4">Video</a></li>
-                    </ul>
-                    </td>
-                  </tr>
                   <tr>
                     <td>
-                       <p class="text"><strong>17:00-18:00 - LONG BREAK</strong></p>
-                    </td>
-                  </tr>
-                 <tr>
-                    <td>
-                      <p class="text"><strong>18:00-19:00 - SESSION 4</strong> (Chair: TBA)</p>
-                      <ul class="text">
-                        <li><strong>18:00-18:30 - TBA</strong><br>
-                          TBA<br>
-                           <a class="link"
-                             target="_tabs"
-                             href="paper.pdf">Paper (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="slides.pdf">Slides (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="video.mp4">Video</a></li>
-                        <li><strong>18:30-19:00 - TBA</strong><br>
-                          TBA<br>
-                           <a class="link"
-                             target="_tabs"
-                             href="paper.pdf">Paper (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="slides.pdf">Slides (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="video.mp4">Video</a></li>
-		        </ul>
-	             </td>	    
-	           </tr>
-	           <tr>
-                    <td>
-                       <p class="text"><strong>19:00-20:00 - KEYNOTE SPEAKER 3: TBA</strong> (Chair: TBA)
-                         <br>
-                         <strong>TBA</strong>
-                         <br>
-                         <a class="link"
-                            href="keynote.html">Abstract and Speaker's Biography</a> |
-                         <a class="link"
-                            target="_tabs"
-                            href="slides.pdf">Slides (PDF)</a> |
-                         <a class="link"
-                            target="_tabs"
-                            href="video.mp4">Video</a>
-                      </p>
-                    </td>
-                   </tr>
-                    </ul>
-                    </td>
-                  </tr>
-<br>
-<br>
-<hr size="1">
-<a name="WED"></a>
-<h2 style="color:#B40431;">Friday, 10 September 2021</h2>
-                    <td>
-                       <p class="text"><strong>13:30-14:30 - KEYNOTE SPEAKER 4: TBA</strong> (Chair: TBA)
-                         <br>
-                         <strong>TBA</strong>
-                         <br>
-                         <a class="link"
-                            href="keynote.html">Abstract and Speaker's Biography</a> |
-                         <a class="link"
-                            target="_tabs"
-                            href="slides.pdf">Slides (PDF)</a> |
-                         <a class="link"
-                            target="_tabs"
-                            href="video.mp4">Video</a>
-                      </p>
-                    </td>
-                   </tr>
-                   <tr>
-                    <td>
-                       <p class="text"><strong>14:30-15:00 - SHORT BREAK</strong></p>
-                    </td>
-                  </tr>               
-                 <tr>
-                    <td>
-                      <p class="text"><strong>15:00-17:00 - SESSION 5</strong> (Chair: TBA)</p>
-                      <ul class="text">
-                        <li><strong>15:00-15:30 - TBA</strong><br>
-                          TBA<br>
-                           <a class="link"
-                             target="_tabs"
-                             href="paper.pdf">Paper (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="slides.pdf">Slides (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="video.mp4">Video</a></li>
-                        <li><strong>15:30-16:00 - TBA</strong><br>
-                          TBA<br>
-                           <a class="link"
-                             target="_tabs"
-                             href="paper.pdf">Paper (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="slides.pdf">Slides (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="video.mp4">Video</a></li>
-                        <li><strong>16:00-16:30 - TBA</strong><br>
-                          TBA<br>
-                           <a class="link"
-                             target="_tabs"
-                             href="paper.pdf">Paper (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="slides.pdf">Slides (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="video.mp4">Video</a></li>
-                        <li><strong>16:30-17:00 - TBA</strong><br>
-                          TBA<br>
-                           <a class="link"
-                             target="_tabs"
-                             href="paper.pdf">Paper (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="slides.pdf">Slides (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="video.mp4">Video</a></li>
-                    </ul>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                       <p class="text"><strong>17:00-18:00 - LONG BREAK</strong></p>
-                    </td>
-                  </tr>
-                 <tr>
-                    <td>
-                      <p class="text"><strong>18:00-19:30 - SESSION 6</strong> (Chair: TBA)</p>
-                      <ul class="text">
-                        <li><strong>18:00-18:30 - TBA</strong><br>
-                          TBA<br>
-                           <a class="link"
-                             target="_tabs"
-                             href="paper.pdf">Paper (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="slides.pdf">Slides (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="video.mp4">Video</a></li>
-                        <li><strong>18:30-19:00 - TBA</strong><br>
-                          TBA<br>
-                           <a class="link"
-                             target="_tabs"
-                             href="paper.pdf">Paper (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="slides.pdf">Slides (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="video.mp4">Video</a></li>
-                        <li><strong>19:00-19:30 - TBA</strong><br>
-                          TBA<br>
-                           <a class="link"
-                             target="_tabs"
-                             href="paper.pdf">Paper (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="slides.pdf">Slides (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="video.mp4">Video</a></li>
-                    </ul>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                       <p class="text"><strong>19:30-19:45 - CLOSING</strong></p>
+                       <h3>19:30-19:45 GMT+6 - CLOSING</h3>
                     </td>
                   </tr>
 <br>
