--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -189,12 +189,18 @@
                  <tr>
                     <td>
                       <h3>WED 15:00-17:00 GMT+6 - <a style="color:#B40431;">Session 2: EFFICIENT MODEL-CHECKING METHODS (Chair: TBA)</h3>
+			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
+			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
+                         <a class="link"
+			    style="color:#B40431;"
+                            href=""></a> |
+                         The session video recording will be linked from here.
                       <ul class="text">
                         <li><strong><a style="color:#B40431;">A divide & conquer approach to conditional stable model checking</a><br>
 				Yati Phyo, Canh Do Minh and Kazuhiro Ogata</strong>
                           <a class="link"
 			     style="color:#B40431;"
-                             href=""></a>.
+                             href=""></a>
 			</li>
 			<br>
                       </ul>
