--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -165,17 +165,18 @@
                    <tr>
                     <td>
 		       <a name="OPENING"></a>
-                       <h3>WED 13:30-14:30 GMT+6 - <a style="color:#B40431;">Session 1 (Keynote Speaker): KIM LARSEN</a></h3>
+                       <h3>WED 13:30-14:30 GMT+6 - <a style="color:#B40431;">Session 1 (Keynote Speaker): KIM LARSEN</a>
 			    (Chair: Peter Csaba Olveczky)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
                          <ul>
                            <li><strong><a style="color:#B40431;">Model Checking and Machine Learning Joining Forces<a></strong></li>
                          </ul>
-                         <a class="link"
-			    style="color:#B40431;"
-                            href="keynote.html">Abstract and Speaker's Biography</a> |
-                         The session video recording will be linked from here.
+			 <p class="text">
+                           <a class="link"
+			      style="color:#B40431;"
+                              href="keynote.html">Abstract and Speaker's Biography</a> |
+                           The session video recording will be linked from here.</p>
                       </p>
                     </td>
                     <hr>
@@ -188,12 +189,12 @@
                   </tr>               
                  <tr>
                     <td>
-                      <h3>WED 15:00-17:00 GMT+6 - <a style="color:#B40431;">Session 2: EFFICIENT MODEL-CHECKING METHODS (Chair: TBA)</h3>
+                      <h3>WED 15:00-17:00 GMT+6 - <a style="color:#B40431;">Session 2: EFFICIENT MODEL-CHECKING METHODS<a> (Chair: TBA)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
                          <a class="link"
 			    style="color:#B40431;"
-                            href=""></a> |
+                            href=""></a>
                          The session video recording will be linked from here.
                       <ul class="text">
                         <li><strong><a style="color:#B40431;">A divide & conquer approach to conditional stable model checking</a><br>
