--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -203,7 +203,10 @@
 			     style="color:#B40431;"
                              href=""></a>
 			</li>
-			<br>
+			<br><li><strong><a style="color:#B40431;"><a style="color:#B40431;">Accelerating SpMV Multiplication in
+			      Probabilistic Model Checkers using GPUs</a><br>
+			        Muhammad Hannan Khan, Osman Hasan and Shahid Khan</strong>
+	                 </li>
                       </ul>
                     </td>
                   </tr>
