--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -121,6 +121,30 @@
     <td><strong>17:15</strong></td>
     <td><strong>19:15</strong></td>
   </tr>
+  <tr align = "left">
+    <td><strong><a style="color:#B40431;" href="#WED">8 September</a></stong></td>
+    <td><strong><a style="color:#B40431;" href="#OPENING">2. EFFICIENT MODEL-CHECKING METHODS</a></stong></td>
+    <td><strong>120 min.</strong></td>  
+    <td><strong>1:30</strong></td>
+    <td><strong>2:30</strong></td>
+    <td><strong>3:30</strong></td>
+    <td><strong>4:30</strong></td>
+    <td><strong>7:30</strong></td>
+    <td><strong>8:30</strong></td>
+    <td><strong>9:30</strong></td>
+    <td><strong>10:30</strong></td>
+    <td><strong>11:30</strong></td>
+    <td><strong>12:00</strong></td>	  
+    <td><strong>12:30</strong></td>
+    <td><strong>13:00</strong></td>
+    <td><strong>13:30</strong></td>
+    <td><strong>14:30</strong></td>
+    <td><strong>15:30</strong></td>  
+    <td><strong>16:30</strong></td>
+    <td><strong>17:00</strong></td>
+    <td><strong>17:30</strong></td>
+    <td><strong>19:30</strong></td>
+  </tr>
 </table>
 <h3 style="color:#B40431;">Time zones:</h3>
 <ul>
