--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -199,7 +199,7 @@
 			 <p class="text">
                            <a class="link"
 			      style="color:#B40431;"
-                              href="keynote.html">Abstract and Speaker's Biography</a> |
+                              href="keynotes.html#KIM">Abstract and Speaker's Biography</a> |
                            The session video recording will be linked from here.</p>
                       </p>
                     </td>
