--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -123,7 +123,7 @@
   </tr>
   <tr align = "left">
     <td><strong><a style="color:#B40431;" href="#WED">8 September</a></stong></td>
-    <td><strong><a style="color:#B40431;" href="#OPENING">2. EFFICIENT MODEL-CHECKING METHODS</a></stong></td>
+    <td><strong><a style="color:#B40431;" href="#SESSION-2">2. EFFICIENT MODEL-CHECKING METHODS</a></stong></td>
     <td><strong>120 min.</strong></td>  
     <td><strong>1:30</strong></td>
     <td><strong>2:30</strong></td>
@@ -181,18 +181,18 @@
 		       <a name="OPENING"></a>
 			    <h3>WED 13:15-13:30 GMT+6- <a style="color:#B40431;">OPENING</a></h3>
 			       <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
-			         See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong>
+			         See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong>
 		               </p>
                     </td>
 		    <hr>
                    </tr>
                    <tr>
                     <td>
-		       <a name="OPENING"></a>
+		       <a name="SESSION-2"></a>
                        <h3>WED 13:30-14:30 GMT+6 - <a style="color:#B40431;">Session 1 (Keynote Speaker): KIM LARSEN</a>
 			    (Chair: Peter Csaba Olveczky)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
-			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
+			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
                          <ul>
                            <li><strong><a style="color:#B40431;">Model Checking and Machine Learning Joining Forces<a></strong></li>
                          </ul>
