--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -51,7 +51,7 @@
 <table border="1">
   <tr align="left">
     <th style='border-bottom:none'>DAY</th>
-    <th style='border-bottom:none'>Session</th>
+    <th style='border-bottom:none'>SESSION NAME or BREAK</th>
     <th style='border-bottom:none'>Duration</th>	  
     <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
     <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
@@ -75,7 +75,7 @@
   </tr>
   <tr align = "left">
     <th style='border-top:none'></th>
-    <th style='border-top:none'>or Break</th>
+    <th style='border-top:none'></th>
     <th style='border-top:none'></th>
     <th style='border-top:none'><a style="color:#B40431;">-6:00</a></th>
     <th style='border-top:none'><a style="color:#B40431;">-5:00</a></th>
@@ -98,7 +98,7 @@
     <th style='border-top:none'><a style="color:#B40431;">+12:00</a></th>
   </tr>
   <tr align = "left">
-    <td><strong><a style="color:#B40431;" href="#WED">WEDNESDAY</a></stong></td>
+    <td><strong><a style="color:#B40431;border-bottom:none;" href="#WED">WEDNESDAY</a></stong></td>
     <td><strong><a style="color:#B40431;" href="#OPENING">OPENING</a></stong></td>
     <td><strong>15 min.</strong></td>  
     <td><strong>1:15</strong></td>
@@ -122,7 +122,7 @@
     <td><strong>19:15</strong></td>
   </tr>
   <tr align = "left">
-    <td><strong><a style="color:#B40431;" href="#WED">8 September</a></stong></td>
+    <td><strong><a style="color:#B40431;border-top:none;border-bottom:none;" href="#WED">8 September</a></stong></td>
     <td><strong><a style="color:#B40431;" href="#SESSION-2">2. EFFICIENT MODEL-CHECKING METHODS</a></stong></td>
     <td><strong>120 min.</strong></td>  
     <td><strong>1:30</strong></td>
