--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -98,7 +98,7 @@
     <th style='border-top:none'><a style="color:#B40431;">+12:00</a></th>
   </tr>
   <tr align = "left">
-    <td><strong><a style="color:#B40431;border-bottom:none;" href="#WED">WEDNESDAY</a></stong></td>
+    <td><strong><a style="color:#B40431;border-top:none;;border-bottom:none;" href="#WED">WEDNESDAY</a></stong></td>
     <td><strong><a style="color:#B40431;" href="#OPENING">OPENING</a></stong></td>
     <td><strong>15 min.</strong></td>  
     <td><strong>1:15</strong></td>
