--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -122,7 +122,7 @@
     <td><strong>19:15</strong></td>
   </tr>
   <tr align = "left">
-    <td style="border-top:none;border-bottom:none;><strong><a style="color:#B40431"; href="#WED">8 September</a></stong></td>
+    <td style="border-top:none;border-bottom:none;><strong><a style="color:#B40431";>8 September</a></stong></td>
     <td><strong><a style="color:#B40431;" href="#SESSION-2">2. EFFICIENT MODEL-CHECKING METHODS</a></stong></td>
     <td><strong>120 min.</strong></td>  
     <td><strong>1:30</strong></td>
