--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -227,10 +227,15 @@
 			     style="color:#B40431;"
                              href=""></a>
 			</li>
-			<br><li><strong><a style="color:#B40431;"><a style="color:#B40431;">Accelerating SpMV Multiplication in
-			      Probabilistic Model Checkers using GPUs</a><br>
+			<br>
+			<li><strong><a style="color:#B40431;">Accelerating SpMV Multiplication in Probabilistic Model Checkers using GPUs</a><br>
 			        Muhammad Hannan Khan, Osman Hasan and Shahid Khan</strong>
 	                 </li>
+			<br>
+			<li><strong><a style="color:#B40431;">A Set Automaton to Locate All Pattern Matches in a Term
+	                   <a style="color:#B40431;"></a><br>
+			        Rick Erkens and Jan Friso Groote</strong>
+	                 </li>								       										       
                       </ul>
                     </td>
                   </tr>
