--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -98,7 +98,7 @@
     <th style='border-top:none'><a style="color:#B40431;">+12:00</a></th>
   </tr>
   <tr align = "left">
-    <td style="border-top:none;;border-bottom:none;"><strong><a style="color:#B40431"; href="#WED";>WEDNESDAY</a></stong></td>
+    <td style="border-bottom:none;"><strong><a style="color:#B40431"; href="#WED";>WEDNESDAY</a></stong></td>
     <td><strong><a style="color:#B40431;" href="#OPENING">OPENING</a></stong></td>
     <td><strong>15 min.</strong></td>  
     <td><strong>1:15</strong></td>
@@ -122,8 +122,8 @@
     <td><strong>19:15</strong></td>
   </tr>
   <tr align = "left">
-    <td style="border-top:none;border-bottom:none;><strong><a style="color:#B40431"; href="#WED";>8 September</a></stong></td>
-    <td><strong><a style="color:#B40431;" href="#SESSION-2">2. EFFICIENT MODEL-CHECKING METHODS</a></stong></td>
+    <td style="border-top:none;border-bottom:none;><strong><a style="color:#B40431"; href="#WED";>8 September</a></strong></td>
+    <td><strong><a style="color:#B40431;" href="#SESSION-2">2. EFFICIENT MODEL-CHECKING METHODS</a></strong></td>
     <td><strong>120 min.</strong></td>  
     <td><strong>1:30</strong></td>
     <td><strong>2:30</strong></td>
