--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -124,7 +124,7 @@
   <tr align = "left">
     <td style="border-top:none;border-bottom:none;><strong><a style="color:#B40431"; href="#WED";>8 September</a></strong></td>
     <td><strong><a style="color:#B40431;" href="#SESSION-2">2. EFFICIENT MODEL-CHECKING METHODS</a></strong></td>
-    <td><strong>120 min.</strong></td>  
+    <td><strong>90 min.</strong></td>  
     <td><strong>1:30</strong></td>
     <td><strong>2:30</strong></td>
     <td><strong>3:30</strong></td>
@@ -176,6 +176,7 @@
 <a name="WED"></a>
 <h2 style="color:#B40431;">Wednesday, 8 September 2021</h2>
 <hr size="1">
+	        <table>
                   <tr>
                     <td>
 		       <a name="OPENING"></a>
@@ -238,20 +239,15 @@
 	                 </li>								       										       
                       </ul>
                     </td>
+		    <hr>			    
                   </tr>
                   <tr>
                     <td>
-		       <a name="OPENING"></a>
+		       <a name="CLOSING"></a>
 			    <h3>FRI 17:00-18:00 GMT+6- <a style="color:#B40431;">CLOSING</a></h3>
                     </td>
                   </tr>
-<br>
-<br>
-                  <tr>
-                    <td>
-                       <h3>19:30-19:45 GMT+6 - CLOSING</h3>
-                    </td>
-                  </tr>
+		</table>  
 <br>
 <br>
 
