--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -213,7 +213,7 @@
                   </tr>               
                  <tr>
                     <td>
-                      <h3>WED 15:00-17:00 GMT+6 - <a style="color:#B40431;">Session 2: EFFICIENT MODEL-CHECKING METHODS<a> (Chair: TBA)</h3>
+                      <h3>WED 15:00-16:30 GMT+6 - <a style="color:#B40431;">Session 2: EFFICIENT MODEL-CHECKING METHODS<a> (Chair: TBA)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
                          <a class="link"
@@ -232,9 +232,42 @@
 			        Muhammad Hannan Khan, Osman Hasan and Shahid Khan</strong>
 	                 </li>
 			<br>
-			<li><strong><a style="color:#B40431;">A Set Automaton to Locate All Pattern Matches in a Term
-	                   <a style="color:#B40431;"></a><br>
+			<li><strong><a style="color:#B40431;">A Set Automaton to Locate All Pattern Matches in a Term</a><br>
 			        Rick Erkens and Jan Friso Groote</strong>
+	                 </li>								       										       
+                      </ul>
+                    </td>
+		    <hr>			    
+                  </tr>
+                   <tr>
+                    <td>
+                       <h3>WED 16:30-17:30 GMT+6 - LONG BREAK</h3>
+                    </td>
+		    <hr>	   
+                  </tr>               
+                 <tr>
+                    <td>
+                      <h3>WED 17:30-18:30 GMT+6 - <a style="color:#B40431;">Session 3: <a> (Chair: TBA)</h3>
+			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
+			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
+                         <a class="link"
+			    style="color:#B40431;"
+                            href=""></a>
+                         The session video recording will be linked from here.
+                      <ul class="text">
+                        <li><strong><a style="color:#B40431;"></a><br>
+				a</strong>
+                          <a class="link"
+			     style="color:#B40431;"
+                             href=""></a>
+			</li>
+			<br>
+			<li><strong><a style="color:#B40431;"></a><br>
+			        </strong>
+	                 </li>
+			<br>
+			<li><strong><a style="color:#B40431;"></a><br>
+			        </strong>
 	                 </li>								       										       
                       </ul>
                     </td>
