--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -230,22 +230,28 @@
 			<br>
 			<li><strong><a style="color:#B40431;">Accelerating SpMV Multiplication in Probabilistic Model Checkers using GPUs</a><br>
 			        Muhammad Hannan Khan, Osman Hasan and Shahid Khan</strong>
+                          <a class="link"
+			     style="color:#B40431;"
+                             href=""></a>
 	                 </li>
 			<br>
 			<li><strong><a style="color:#B40431;">A Set Automaton to Locate All Pattern Matches in a Term</a><br>
 			        Rick Erkens and Jan Friso Groote</strong>
+                          <a class="link"
+			     style="color:#B40431;"
+                             href=""></a>
 	                 </li>								       										       
                       </ul>
                     </td>
 		    <hr>			    
                   </tr>
-                   <tr>
+                  <tr>
                     <td>
                        <h3>WED 16:30-17:30 GMT+6 - LONG BREAK</h3>
                     </td>
 		    <hr>	   
                   </tr>               
-                 <tr>
+                  <tr>
                     <td>
                       <h3>WED 17:30-18:30 GMT+6 - <a style="color:#B40431;">Session 3: <a> (Chair: TBA)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
@@ -264,10 +270,49 @@
 			<br>
 			<li><strong><a style="color:#B40431;"></a><br>
 			        </strong>
+                          <a class="link"
+			     style="color:#B40431;"
+                             href=""></a>
+	                 </li>
+                      </ul>
+                    </td>
+		    <hr>			    
+                  </tr>
+                  <tr>
+                    <td>
+                       <h3>WED 18:30-19:00 GMT+6 - SHORT BREAK</h3>
+                    </td>
+		    <hr>	   
+                  </tr>               
+                  <tr>
+                    <td>
+                      <h3>WED 19:00-20:30 GMT+6 - <a style="color:#B40431;">Session 4: <a> (Chair: TBA)</h3>
+			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
+			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
+                         <a class="link"
+			    style="color:#B40431;"
+                            href=""></a>
+                         The session video recording will be linked from here.
+                      <ul class="text">
+                        <li><strong><a style="color:#B40431;"></a><br>
+				a</strong>
+                          <a class="link"
+			     style="color:#B40431;"
+                             href=""></a>
+			</li>
+			<br>
+			<li><strong><a style="color:#B40431;"></a><br>
+			        </strong>
+                          <a class="link"
+			     style="color:#B40431;"
+                             href=""></a>
 	                 </li>
 			<br>
 			<li><strong><a style="color:#B40431;"></a><br>
 			        </strong>
+                          <a class="link"
+			     style="color:#B40431;"
+                             href=""></a>
 	                 </li>								       										       
                       </ul>
                     </td>
